--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,17 @@ img {
   text-align: center;
   padding: 200px 0;
 }
+.overlay {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #c4c4c4;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-bg.jpg);
+  /* background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center; */
+}
 .hero-title {
   font-weight: 900;
   font-size: 44px;
@@ -123,6 +134,7 @@ img {
   max-width: 696px;
   margin: 0 auto;
   margin-bottom: 30px;
+  color: #ffffff;
 }
 .modal-btn {
   min-width: 200px;
@@ -149,8 +161,32 @@ img {
 .advantages-list {
   display: flex;
 }
+
 .advantages-list-item:not(:last-child) {
   margin-right: 30px;
+}
+.advantages-list-item::before {
+  content: "";
+  display: block;
+  /* outline: 1px solid #000000; */
+  height: 120px;
+  background-color: #f5f4fa;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+.icon-aerial::before {
+  background-image: url("../images/advantages/icon-aerial.svg");
+}
+.icon-clock::before {
+  background-image: url("../images/advantages/icon-clock.svg");
+}
+.icon-laptop::before {
+  background-image: url("../images/advantages/icon-laptop.svg");
+}
+.icon-astronaut::before {
+  background-image: url("../images/advantages/icon-astronaut.svg");
 }
 .advantages-list-title {
   font-weight: 700;
@@ -169,9 +205,10 @@ img {
 }
 /* ============ END ADVANTAGES ============ */
 
-/* ======== SERVICES & TEAM CARD TITLES ======== */
+/* ======== TITLES IN MAIN ======== */
 .services-title,
-.teamcard-title {
+.teamcard-title,
+.clients-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.166;
@@ -179,7 +216,7 @@ img {
   color: var(--title-text-color);
   margin-bottom: 50px;
 }
-/* ====== END SERVICES & TEAM CARD TITLES ====== */
+/* ====== END TITLES IN MAIN ====== */
 
 /* ============ SERVICES ============ */
 .services-list {
@@ -206,7 +243,7 @@ img {
   margin-right: 30px;
 }
 .teamcard-list-container {
-  padding: 30px 60px;
+  padding: 30px 40px;
 }
 .teamcard-list-name {
   margin-bottom: 10px;
@@ -217,13 +254,71 @@ img {
   color: var(--title-text-color);
 }
 .teamcard-list-text {
+  margin-bottom: 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
   color: var(--main-text-color);
 }
+.social-list {
+  display: flex;
+  justify-content: space-between;
+}
+.social-list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+.social-icon {
+  fill: #afb1b8;
+  width: 20px;
+  height: 20px;
+}
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: var(--accent-color);
+}
+.social-list-link:hover .social-icon,
+.social-list-link:focus .social-icon {
+  fill: #ffffff;
+}
+
 /* ============ END TEAM CARD ============ */
+
+/* ============ CLIENTS ============ */
+.clients-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.clients-icon {
+  fill: #afb1b8;
+  width: 88px;
+  height: 52px;
+}
+.clients-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+.clients-link:hover,
+.clients-link:focus {
+  border-color: var(--accent-color);
+}
+.clients-link:hover .clients-icon,
+.clients-link:focus .clients-icon {
+  fill: var(--accent-color);
+}
+/* ============ END CLIENTS ============ */
 
 /* ============ FOOTER ============ */
 .footer {
@@ -232,7 +327,12 @@ img {
 }
 .footer .container {
   display: flex;
+  align-items: baseline;
+}
+.footer .contacts-container {
+  display: flex;
   flex-direction: column;
+  margin-right: 70px;
 }
 .footer .logo {
   margin-bottom: 20px;
@@ -262,6 +362,28 @@ img {
   line-height: 1.714;
   color: rgba(255, 255, 255, 0.6);
 }
+.social-list-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--classic-white);
+  margin-bottom: 20px;
+}
+.footer-social-container .social-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+.footer-social-container .social-icon {
+  fill: var(--classic-white);
+}
+.footer-social-container .social-list-link {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.footer-social-container .social-list-link:hover,
+.footer-social-container .social-list-link:focus {
+  background-color: var(--accent-color);
+}
+
 /* ============ END FOOTER ============ */
 
 /* ============ PORTFOLIO ============ */
@@ -303,6 +425,10 @@ img {
 }
 .projects-list-item:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
+}
+.projects-list-item:hover,
+.projects-list-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .projects-list-description {
   border: 1px solid #eeeeee;
